# evomorph

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  README.md  Vagrantfile  WORKSPACE.bazel  build  config.json  deps.bzl  docker-compose.yaml  evolve.bat  evolve.py  evomorph  go.mod  go.sum  readme.md  run  run.bat  run.command  run.py  run.sh  setup.bat
analysis/: fitness_analysis.ipynb  params.csv  params.html  tools.py  viz.ipynb
analysis/.ipynb_checkpoints/: viz-checkpoint.ipynb
analysis/fitness_tests/: fitness_analysis.ipynb
cc3d/Simulation/: config.xml  sim.py  steppables.py
controller/: BUILD.bazel  main.go
controller/client/: main.go
controller/gateway/: cert.go  gateway.go  handlers.go
controller/server/: main.go  server.go
controller/test/: main.go
docs/: BUILD.bazel
engine/: BUILD.bazel  Dockerfile  api.py  go.mod  go.sum  main.go
engine/client/: main.go
engine/server/: run.sh  server.go
engine/test/: BUILD.bazel  main.go
genome/: params.json
models/: Proliferation_3D.xml  barkley3d_coupling.xml  three_layer.xml
models/lateral_inhibition/: genome.json
output/: data.json
output/LatticeData/: StepLDF.dml
points_test/Simulation/: genome.json  steppables.py
points_test/output/LatticeData/: StepLDF.dml
post/: gens.ipynb  paramscan.ipynb
protos/: BUILD.bazel  common.proto  controller.proto  engine.proto
protos/docs/: embed.go
protos/docs/OpenAPI/: evomorph.swagger.json  index.html
protos/openapiv2/: annotations.proto
src/: run.py
src/cli/: evolve.py
src/config/: container.sh
src/container/: def.sh
src/controller/: BUILD.bazel  box.def.sh  cc3d_box.def  main.py  run.py  runner.py  viz.py
src/engine/: BUILD.bazel  go.mod  main.go
src/engine/server/: BUILD.bazel
src/engine/test/: main.go
src/models/elongation/: genome.json  sim.cc3d
src/models/lat_inhib/: sim.cc3d
src/models/lateral_inhibition/: config.xml  genome.json
src/models/three_layer/: genome.json
src/models/two_layer/: genome.json
src/protos/: BUILD.bazel  common.proto  controller.proto  engine.proto
src/tools/: calculations.py  simulate.py  simulation.py  viz.py
src/web/server/: requirements.txt
src/web/tissue-app/: package.json
stage/sim_0/Simulation/: genome.json  sim.py  steppables.py
stage/sim_0/output/: data.json
stage/sim_1/Simulation/: config.xml  genome.json
stage/sim_10/Simulation/: genome.json
stage/sim_11/Simulation/: genome.json
stage/sim_12/Simulation/: genome.json
stage/sim_13/Simulation/: genome.json
stage/sim_14/Simulation/: genome.json
stage/sim_15/Simulation/: genome.json
stage/sim_16/Simulation/: genome.json
stage/sim_17/Simulation/: genome.json
stage/sim_18/Simulation/: genome.json
stage/sim_19/Simulation/: genome.json
stage/sim_2/Simulation/: genome.json  steppables.py
stage/sim_20/Simulation/: genome.json
stage/sim_21/Simulation/: genome.json
stage/sim_22/Simulation/: genome.json
stage/sim_23/Simulation/: genome.json
stage/sim_24/Simulation/: genome.json
stage/sim_25/Simulation/: genome.json
stage/sim_26/Simulation/: genome.json
stage/sim_27/Simulation/: genome.json
stage/sim_28/Simulation/: genome.json
stage/sim_29/Simulation/: genome.json
stage/sim_3/Simulation/: genome.json
stage/sim_30/Simulation/: genome.json
stage/sim_31/Simulation/: genome.json
stage/sim_32/Simulation/: genome.json
stage/sim_33/Simulation/: genome.json
stage/sim_34/Simulation/: genome.json
stage/sim_35/Simulation/: genome.json
stage/sim_36/Simulation/: genome.json
stage/sim_37/Simulation/: genome.json
stage/sim_38/Simulation/: genome.json
stage/sim_39/Simulation/: genome.json
stage/sim_4/Simulation/: genome.json
stage/sim_40/Simulation/: genome.json
stage/sim_41/Simulation/: genome.json
stage/sim_42/Simulation/: genome.json
stage/sim_43/Simulation/: genome.json
stage/sim_44/Simulation/: genome.json
stage/sim_45/Simulation/: genome.json
stage/sim_46/Simulation/: genome.json
stage/sim_47/Simulation/: genome.json
stage/sim_48/Simulation/: genome.json
stage/sim_49/Simulation/: genome.json
stage/sim_5/Simulation/: genome.json
stage/sim_50/Simulation/: genome.json
stage/sim_51/Simulation/: genome.json
stage/sim_52/Simulation/: genome.json
stage/sim_53/Simulation/: genome.json
stage/sim_54/Simulation/: genome.json
stage/sim_55/Simulation/: genome.json
stage/sim_56/Simulation/: genome.json
stage/sim_57/Simulation/: genome.json
stage/sim_58/Simulation/: genome.json
stage/sim_59/Simulation/: genome.json  steppables.py
stage/sim_6/Simulation/: genome.json
stage/sim_60/Simulation/: genome.json
stage/sim_61/Simulation/: config.xml  genome.json
stage/sim_62/Simulation/: genome.json
stage/sim_63/Simulation/: genome.json
stage/sim_64/Simulation/: genome.json
stage/sim_65/Simulation/: genome.json
stage/sim_66/Simulation/: genome.json
stage/sim_67/Simulation/: genome.json
stage/sim_68/Simulation/: genome.json
stage/sim_69/Simulation/: genome.json
stage/sim_7/Simulation/: genome.json
stage/sim_70/Simulation/: genome.json
stage/sim_71/Simulation/: genome.json
stage/sim_72/Simulation/: genome.json
stage/sim_73/Simulation/: genome.json
stage/sim_74/Simulation/: genome.json
stage/sim_98/Simulation/: sim.py  (+1 more)
studio/: next.config.js  package.json
studio/pages/: home.tsx  index.tsx
studio/protos/: controller_grpc_web_pb.js  engine_grpc_web_pb.js  frame.js  params.js  progress.js  runreply.js  runrequest.js  simulation.js  startreply.js  startrequest.js  status.js  statustype.js
studio/public/: models.json  sims.json
templates/: genome.json  sim.cc3d
templates/Simulation/: config.xml  steppables.py
test/: run.py
test/Simulation/: genome.json  steppables.py
utils/: Bond_angle_order_parameter.py  calculations.py  config.py  optimize.py
web/: README.md
web/evomorph/: package.json
web/flask/: Simulation.proto  Simulation_pb2.py  Simulation_pb2_grpc.py  converter.py  flask_server.py  python_server_temp.py  three_layer.xml
web/results/: Michael.xml
web/tissue-app/: package-lock.json  package.json
(+175 files in other folders)
