load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude build
# gazelle:proto disable_global
# gazelle:prefix github.com/gabroo/evomorph
gazelle(
    name = "gazelle",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=engine/go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)
