package(default_visibility = ["//visibility:public"])

load("@rules_proto_grpc//cpp:defs.bzl", "cpp_proto_library")

cpp_proto_library(
    name = "controller_cpp_proto",
    protos = ["//protos:controller_proto", "//protos:common_proto"],
)

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = [":controller_cpp_proto"],
)
