load("@rules_proto_grpc//doc:defs.bzl", "doc_html_compile", "doc_markdown_compile")

doc_html_compile(
  name = "index",
  protos = [
    "//protos:common_proto",
    "//protos:controller_proto",
    "//protos:engine_proto",
    "@googleapis//google/api:field_behavior_proto",
  ],
  output_mode = "NO_PREFIX",
)

doc_markdown_compile(
  name = "docs",
  protos = [
    "//protos:common_proto",
    "//protos:controller_proto",
    "//protos:engine_proto",
    "@googleapis//google/api:field_behavior_proto",
  ],
  output_mode = "NO_PREFIX",
)
