load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "engine_lib",
    srcs = ["main.go"],
    importpath = "github.com/gabroo/evomorph/engine",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_x_text//language:go_default_library",
        "@org_golang_x_text//message:go_default_library",
    ],
)

go_binary(
    name = "main",
    embed = [":engine_lib"],
    visibility = ["//visibility:public"],
)
