package(default_visibility = ["//visibility:public"])

proto_library(
    name = "common_proto",
    strip_import_prefix = "",
    srcs = ["common.proto"],
    deps = [
      "@googleapis//google/api:field_behavior_proto",
    ],
)

proto_library(
    name = "engine_proto",
    srcs = ["engine.proto"],
    deps = [
      ":common_proto",
      "@googleapis//google/api:field_behavior_proto",
    ],
)

proto_library(
    name = "controller_proto",
    srcs = ["controller.proto"],
    deps = [
      ":common_proto",
      "@googleapis//google/api:field_behavior_proto",
    ],
)
