load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "protos_proto",
    srcs = [
        "common.proto",
        "controller.proto",
        "engine.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "protos_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "evomorph/protos",
    proto = ":protos_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "protos",
    embed = [":protos_go_proto"],
    importpath = "evomorph/protos",
    visibility = ["//visibility:public"],
)
