load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "test_lib",
    srcs = ["main.go"],
    importpath = "github.com/gabroo/evomorph/engine/test",
    visibility = ["//visibility:private"],
    deps = [
        "//protos:protos_go_proto",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "main",
    embed = [":test_lib"],
    visibility = ["//visibility:public"],
)
