load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "test_lib",
    srcs = ["main.go"],
    importpath = "github.com/gabroo/evomorph/engine/test",
    visibility = ["//visibility:private"],
    deps = [
        "//protos",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "main",
    embed = [":test_lib"],
    visibility = ["//visibility:public"],
)
