load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "engine_lib",
    srcs = ["main.go"],
    importpath = "github.com/gabroo/evomorph/engine",
    visibility = ["//visibility:private"],
    deps = [
        "//protos",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "main",
    embed = [":engine_lib"],
    visibility = ["//visibility:public"],
)
